# pluma

./: AI.md  CMakeLists.txt
.github/: README.md
.github/workflows/: cmake-multi-platform.yml  create-source-package.yml  release.yml
example/: CMakeLists.txt
example/src/interface/: Warrior.hpp
